fix: image sizing on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -86,7 +86,7 @@ h6 {
     max-width: 90%;
   }
   main > img, main > article > img {
-    width: 85%;
+    width: 100%;
     height: auto;
   }
 }
